--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <div class="col s12 m12">
       <div class="card blue-grey darken-1">
         <div class="card-content white-text">
-          <span class="card-title">Top Application in Myanmar</span>
+          <span class="card-title"><b>Top Application in Myanmar</b></span>
           <p>Welcome to My Page. This is the collection of some of the famous application in Myanmar.</p>
         </div>
         <div class="card-action">
