--- a/faq.html
+++ b/faq.html
@@ -1,5 +1,5 @@
 <html>
-<head><title>FAQ for App</title></head>
+<head><title>FAQ</title></head>
 <body>
   <p><b>Q: These application for android or IOS or windows?</b><br>
         A: These application for android.
