--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <a class="mdl-navigation__link" href="index.html">Home</a>
         <a class="mdl-navigation__link" href="top.html">Top</a>
 	<a class="mdl-navigation__link" href="latest.html">Latest</a>
-        <a class="mdl-navigation__link" href="search.html">Search</a>
+        <a class="mdl-navigation__link" href="search.html">search</a>
       </nav>
     </div>
   </header>
