--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <a class="mdl-navigation__link" href="top.html">Top</a>
       <a class="mdl-navigation__link" href="latest.html">Latest</a>
       <a class="mdl-navigation__link" href="search.html">Search</a>
-      <a class="mdl-navigation__link" href="admin.html">Admin</a>
+      <a class="mdl-navigation__link" href="admin.html"></a>
       <a class="mdl-navigation__link" href="login.html">Login</a>
     </nav>
   </div>
