--- a/index.html
+++ b/index.html
@@ -151,6 +151,6 @@
 </div>
 <script src="js/app.js"></script>
 <script src="js/lib.js"></script>
-<script>internsApp.Read();</script>
+<script>internsApp.Read;</script>
   </body>
 </html>
