--- a/latest.html
+++ b/latest.html
@@ -208,7 +208,7 @@
        </div>
   </main>
 </div>
-<script src="js/.js"></script>
+<script src="js/app.js"></script>
 <script src="js/lib.js"></script>
   </body>
 </html>
