--- a/team.html
+++ b/team.html
@@ -12,7 +12,7 @@
 	  <td>
 	<table>
 	     <tr>
-	        <td>Team Lead,</td>
+	        <td>Team Lead</td>
 	     </tr></table>
 	<table>
 	     <tr>
