--- a/search.html
+++ b/search.html
@@ -28,7 +28,7 @@
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <script type="text/javascript" src="js/materialize.js"></script>
 
-    <title>APP in Myanmar</title>
+	  <title><b>APP in Myanmar</b></title>
 
           
   </head>
