--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-	  <title><i><b>Welcome to Firebase Hosting</i></b></title>
+	  <title><b>Welcome to Firebase Hosting</b></title>
 
     <!-- update the version number as needed -->
     <script  src="/__/firebase/5.4.1/firebase-app.js"></script>
