--- a/index.html
+++ b/index.html
@@ -106,11 +106,11 @@
 
     <div class="mdl-mega-footer__drop-down-section">
       <input class="mdl-mega-footer__heading-checkbox" type="checkbox" checked>
-      <h1 class="mdl-mega-footer__heading">Details</h1>
+      <h1 class="mdl-mega-footer__heading">Detail</h1>
       <ul class="mdl-mega-footer__link-list">
-        <li><a href="#">Specs</a></li>
-        <li><a href="#">Tools</a></li>
-        <li><a href="resource.html">Resources</a></li>
+        <li><a href="#">Spec</a></li>
+        <li><a href="#">Tool</a></li>
+        <li><a href="resource.html">Resource</a></li>
       </ul>
     </div>
 
