--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
       <h1 class="mdl-mega-footer__heading">Details</h1>
       <ul class="mdl-mega-footer__link-list">
         <li><a href="#">Specs</a></li>
-        <li><a href="#">Tool</a></li>
-        <li><a href="resource.html">Resource</a></li>
+        <li><a href="#">Tools</a></li>
+        <li><a href="resource.html">Resources</a></li>
       </ul>
     </div>
 
