--- a/latest.html
+++ b/latest.html
@@ -42,10 +42,10 @@
       <div class="mdl-layout-spacer"></div>
       <!-- Navigation. We hide it in small screens. -->
       <nav class="mdl-navigation mdl-layout--large-screen-only" style="background-color: rgb(63,81,181);">
-        <a class="mdl-navigation__link" href="index.html">Home</a>
-        <a class="mdl-navigation__link" href="top.html">Top</a>
-	<a class="mdl-navigation__link" href="latest.html">Latest</a>
-        <a class="mdl-navigation__link" href="search.html">Search</a>
+        <a class="mdl-navigation__link" href="index.html">HOME</a>
+        <a class="mdl-navigation__link" href="top.html">TOP</a>
+	<a class="mdl-navigation__link" href="latest.html">LATEST</a>
+        <a class="mdl-navigation__link" href="search.html">SEARCH</a>
       </nav>
     </div>
   </header>
