--- a/resource.html
+++ b/resource.html
@@ -12,7 +12,7 @@
         <script type="text/javascript" src="js/materialize.js"></script>
 	<!-- Wide card with share menu button -->
 
-    <title>APP in Myanmar</title>
+	  <title><b>APP in Myanmar</b></title>
   </head>
   <body>
 <div class="row">
