--- a/resource.html
+++ b/resource.html
@@ -25,7 +25,7 @@
 		<p><strong>A modern design website to create the design that you want.</strong></p>
 	</div>
 	<div class="card-action">
-          <a href="https://materializecss.com/">Link Here</a>
+		<a href="https://materializecss.com/"><i>Link Here</i></a>
         </div>
 	</div>
 	</div>
