--- a/latest.html
+++ b/latest.html
@@ -52,12 +52,12 @@
   <div class="mdl-layout__drawer">
     <span class="mdl-layout-title">Apps in Myanmar</span>
     <nav class="mdl-navigation" style="background-color: rgb(63,81,181);>
-      <a class="mdl-navigation__link" href="index.html">HOME</a>
-      <a class="mdl-navigation__link" href="top.html">TOP</a>
-      <a class="mdl-navigation__link" href="latest.html">LATEST</a>
-      <a class="mdl-navigation__link" href="search.html">SEARCH</a>
-      <a class="mdl-navigation__link" href="admin.html">ADMIN</a>
-      <a class="mdl-navigation__link" href="login.html">LOGIN</a>
+      <a class="mdl-navigation__link" href="index.html">Home</a>
+      <a class="mdl-navigation__link" href="top.html">Top</a>
+      <a class="mdl-navigation__link" href="latest.html">Latest</a>
+      <a class="mdl-navigation__link" href="search.html">Search</a>
+      <a class="mdl-navigation__link" href="admin.html">Admin</a>
+      <a class="mdl-navigation__link" href="login.html">Login</a>
     </nav>
   </div>
   <main class="mdl-layout__content">
