--- a/search.html
+++ b/search.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-	  <title>Welcome to Firebase Hosting</title>
+	  <title><strong>Welcome to Firebase Hosting</strong></title>
 
     <!-- update the version number as needed -->
     <script  src="/__/firebase/5.4.1/firebase-app.js"></script>
