--- a/team.html
+++ b/team.html
@@ -2,7 +2,7 @@
 	<style>#a{border-color: black;}</style>
    <table id="a" border="1px">
 	<tr style="background-color: green">
-	  <td>NAMEM</td>
+	  <td>NAME</td>
 	  <td>TEAM Roles</td>
 	  <td></td>
 	  <td>Skills / Requirements</td>
