--- a/work.html
+++ b/work.html
@@ -2,8 +2,8 @@
 <head><title>How It Work?</title></head>
 <table border=1px>
  <tr style="background-color:blue";>
-   <td>NAME</td>
-   <td>ROLE</td>
+   <td><center>NAME</center></td>
+  <td><center>ROLE</center></td>
  </tr>
  <tr>
    <td>Aye Nandar Htun</td>
