--- a/top.html
+++ b/top.html
@@ -28,7 +28,7 @@
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <script type="text/javascript" src="js/materialize.js"></script>
 
-	  <title><strong>APP in Myanmar</strong></title>
+	  <title>APP in Myanmar</title>
           
   </head>
   <body>
