--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   </header>
   <div class="mdl-layout__drawer">
     <span class="mdl-layout-title">Apps in Myanmar</span>
-    <nav class="mdl-navigation" style="background-color: rgb(63,81,181);">
+    <nav class="mdl-navigation">
       <a class="mdl-navigation__link" href="index.html">Home</a>
       <a class="mdl-navigation__link" href="top.html">Top</a>
       <a class="mdl-navigation__link" href="latest.html">Latest</a>
