--- a/resource.html
+++ b/resource.html
@@ -22,7 +22,7 @@
 	    <img src="mt.png">
 	  </div>
 	  <div class="card-content">
-		<p><strong>A modern design website to learn to create the design that you want.</strong></p>
+		<p><strong>A modern design website to create the design that you want.</strong></p>
 	</div>
 	<div class="card-action">
           <a href="https://materializecss.com/">Link Here</a>
