--- a/team.html
+++ b/team.html
@@ -23,7 +23,7 @@
 	  <td>
 	    <table>
 		<tr>
-		<td>General for all the technologies involved in creating software. Specific skill and expertise in at least one role in a requirement and is also responsible for monitoring, reporting and proper and timely project execution.</td>
+		<td>General Passion for all the technologies involved in creating software. Specific skill and expertise in at least one role in a requirement and is also responsible for monitoring, reporting and proper and timely project execution.</td>
 	        </tr></table>
 	    <table>  
  	     <tr>
