--- a/team.html
+++ b/team.html
@@ -27,7 +27,7 @@
 	        </tr></table>
 	    <table>  
  	     <tr>
-		<td>Have clear and conciese writing skills. Understands the value of documentation.</td>
+		<td>Have clear and conciese skills. Understands the value of documentation.</td>
 	     </tr>
 	   </table>
 	   </td>
