--- a/team.html
+++ b/team.html
@@ -39,7 +39,7 @@
 	  <td>Aye Thandar Aung</td>
 	  <td>Lead Developer + DevOps</td>
  	  <td>1</td>
-	  <td>Strongest programming and system administration skills in the group. Sometime the Team Lead can take this role if there is no one else to assign to</td>
+	  <td>Strongest and system administration skills in the group. Sometime the Team Lead can take this role if there is no one else to assign to</td>
 	<tr>
 	<tr>
 	  <td>Kyaw Zin Aung</td>
