--- a/work.html
+++ b/work.html
@@ -6,7 +6,7 @@
   <td><center>ROLE</center></td>
  </tr>
  <tr>
-   <td>Aye Nandar</td>
+   <td>Aye Nandar Htun</td>
    <td>Team Lead<br>
        Text & Documentation</td>
  </tr>
