--- a/work.html
+++ b/work.html
@@ -11,7 +11,7 @@
        Text & Documentation</td>
  </tr>
  <tr>
-   <td>Aye Thandar</td>
+   <td>Aye Thandar Aung</td>
    <td>Lead Developer + DevOps</td>
  </tr>
  <tr>
