--- a/search.html
+++ b/search.html
@@ -67,7 +67,7 @@
 <form action="#">
   <div class="mdl-textfield mdl-js-textfield">
     <input class="mdl-textfield__input" type="text" id="app">
-    <label class="mdl-textfield__label" for="app">Search...</label>
+    <label class="mdl-textfield__label" for="app">App...</label>
   </div>
 </form>
 <!-- Primary-colored flat button -->
