--- a/search.html
+++ b/search.html
@@ -72,7 +72,7 @@
 </form>
 <!-- Primary-colored flat button -->
 <button class="mdl-button mdl-js-button mdl-button--primary" onclick="internsApp.Read()">
-  Search
+  App
 </button>
 
 
