--- a/admin.html
+++ b/admin.html
@@ -38,7 +38,7 @@
   <header class="mdl-layout__header">
     <div class="mdl-layout__header-row">
       <!-- Title -->
-      <span class="mdl-layout-title">Apps in Myanmar</span>
+      <span class="mdl-layout-title">Intern</span>
       <!-- Add spacer, to align navigation to the right -->
       <div class="mdl-layout-spacer"></div>
       <!-- Navigation. We hide it in small screens. -->
