--- a/team.html
+++ b/team.html
@@ -43,7 +43,7 @@
 	<tr>
 	<tr>
 	  <td>Kyaw Zin Aung</td>
-	  <td>UI/UX</td>
+	  <td>UI/UX Lead</td>
 	  <td>1</td>
 	  <td>Passtion for design and userability. Someone who can think like a normal user. In this program he/she must have skills in HTML/CSS/JS and must learn a few frameworks such as BootStrap, Material Design, Angular and so on.</td>
 	</tr>
