--- a/top.html
+++ b/top.html
@@ -53,7 +53,7 @@
     <span class="mdl-layout-title">Apps in Myanmar</span>
     <nav class="mdl-navigation" style="background-color: rgb(63,81,181);>
       <a class="mdl-navigation__link" href="index.html">Home</a>
-      <a class="mdl-navigation__link" href="top.html">Topper</a>
+      <a class="mdl-navigation__link" href="top.html">Top</a>
       <a class="mdl-navigation__link" href="latest.html">Latest</a>
       <a class="mdl-navigation__link" href="search.html">Search</a>
       <a class="mdl-navigation__link" href="admin.html">Admin</a>
