--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <i class="material-icons mdl-list__item-avatar">person</i>
       <span data-bind="text: name">Geo-Flower</span>
       <span class="mdl-list__item-text-body">
-	      StudentID: <span data-bind="text: app"> #StudentID </span> Name: <span data-bind="text: name"> #Name </span> Project: <span data-bind="text: project" > #Project </span>
+	      StudentID: <span data-bind="text: app"> #Student </span> Name: <span data-bind="text: name"> #Name </span> Project: <span data-bind="text: project" > #Project </span>
       </span>
     </span>
     <span class="mdl-list__item-secondary-content">
